@@ -25,6 +25,7 @@ Bug fixes
  - [core] avoid exceptions for RRULE with no DTSTART
  - [core] make sure we handle events occurring after RRULE's UNTIL date
  - [core] avoid changing RRULE's UNTIL date for no reason
+ - [eas] improve FolderSync operation (#4672)
 
 4.0.8 (2019-07-19)
 ------------------
